# rust_lambda

./: .gitignore  Cargo.toml  Makefile
src/: main.rs
