[package]
name = "rust_lambda"
version = "0.1.0"
authors = ["Vinícius Simões <vinicius.simoes95@gmail.com>"]
edition = "2018"
auto_bins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2.1"
serde = {version= "^1.0", features = ["derive"]}
